# nendo_plugin_musicgen

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  setup.py
docs/: advanced.md  community_finetunes.json  prompting.md
src/nendo_plugin_musicgen/: __init__.py  config.py  musicgen.py  plugin.py
tests/: test_musicgen_plugin.py
